# ti-img-rogue-driver

./: BUILD.bazel  Makefile  build.config.imgtech
copy-to-kernel-tc/: config_kernel.h  config_kernel.mk  copy_items.sh  drm_pdp.mk  pvrsrvkm.mk
hwdefs/km/: rgx_bvnc_table_km.h
hwdefs/km/configs/: rgxconfig_km_22.V.22.25.h
hwdefs/km/cores/: rgxcore_km_22.105.208.318.h  rgxcore_km_22.75.22.25.h  rgxcore_km_24.45.54.204.h  rgxcore_km_24.50.208.504.h
hwdefs/rogue/km/: rgx_bvnc_defs_km.h  rgx_bvnc_table_km.h  rgx_cr_defs_km.h  rgxdefs_km.h
hwdefs/rogue/km/configs/: rgxconfig_km_46.V.102.389.h  rgxconfig_km_46.V.204.390.h
hwdefs/rogue/km/cores/: rgxcore_km_46.72.102.389.h  rgxcore_km_46.94.204.390.h
hwdefs/volcanic/: rgxpmdefs.h
hwdefs/volcanic/km/: rgx_bvnc_defs_km.h  rgx_bvnc_table_km.h  rgx_cr_defs_km.h  rgxdefs_km.h  rgxmmudefs_km.h  rgxtbdefs_km.h
hwdefs/volcanic/km/configs/: rgxconfig_km_30.V.1632.1.h  rgxconfig_km_30.V.408.101.h  rgxconfig_km_30.V.816.20.h  rgxconfig_km_35.V.1632.21.h  rgxconfig_km_35.V.1632.23.h  rgxconfig_km_35.V.1632.34.h  rgxconfig_km_35.V.1632.35.h  rgxconfig_km_35.V.408.101.h  rgxconfig_km_35.V.408.23.h  rgxconfig_km_35.V.408.33.h  rgxconfig_km_35.V.408.34.h  rgxconfig_km_38.V.2448.402.h  rgxconfig_km_70.V.2448.1041.h  rgxconfig_km_70.V.2448.1360.h  rgxconfig_km_70.V.2448.4119.h  rgxconfig_km_70.V.2448.418.h  rgxconfig_km_71.V.2448.1210.h  rgxconfig_km_71.V.2448.1211.h  rgxconfig_km_71.V.2448.1212.h  rgxconfig_km_71.V.3672.2080.h  rgxconfig_km_71.V.3672.2081.h  rgxconfig_km_71.V.3672.2082.h  rgxconfig_km_71.V.3672.2083.h  rgxconfig_km_71.V.3672.2084.h
hwdefs/volcanic/km/cores/: rgxcore_km_30.3.408.101.h  rgxcore_km_30.3.816.20.h  rgxcore_km_30.5.1632.1.h  rgxcore_km_35.2.1632.21.h  rgxcore_km_35.2.1632.23.h  rgxcore_km_35.2.1632.34.h  rgxcore_km_35.2.1632.35.h  rgxcore_km_35.2.408.33.h  rgxcore_km_35.2.408.34.h  rgxcore_km_35.3.1632.23.h  rgxcore_km_35.3.408.101.h  rgxcore_km_35.3.408.33.h  rgxcore_km_35.3.408.34.h  rgxcore_km_35.4.1632.23.h  rgxcore_km_35.5.408.23.h  rgxcore_km_38.4.2448.402.h  rgxcore_km_38.6.2448.402.h  rgxcore_km_71.2.3672.2080.h  rgxcore_km_71.2.3672.2081.h  rgxcore_km_71.2.3672.2082.h  (+3 more)
include/: config_kernel_am62_android.h  config_kernel_am62p_android.h  devicemem_typedefs.h  dllist.h  img_defs.h  img_drm_fourcc_internal.h  img_types.h  ion_fbcdc_alloc.h  pvr_debug.h  pvrsrv_error.h  pvrsrv_memalloc_physheap.h  pvrsrv_memallocflags.h  pvrsrv_tlcommon.h  pvrsrv_tlstreams.h  pvrversion.h  rgx_common.h  rgx_fwif_resetframework.h  rgx_fwif_sf.h  rgx_heap_firmware.h  rgx_hwperf_common.h  rgx_mips.h  rgx_riscv.h  servicesext.h  sync_prim_internal.h
include/drm/: pvr_drm.h
include/public/powervr/: img_drm_fourcc.h  imgpixfmts.h  pvrsrv_sync_ext.h
include/rogue/: rgx_fwif_km.h  rgx_fwif_shared.h  rgx_options.h  rgxheapconfig.h  rgxheapconfig_65273.h
include/system/rgx_tc/: odin_defs.h
include/volcanic/: rgx_fwif_km.h  rgx_fwif_shared.h  rgx_hwperf.h  rgx_hwperf_table.h  rgx_options.h  rgxheapconfig.h
services/include/: htbuffer_sf.h  htbuffer_types.h  km_apphint_defs.h  km_apphint_defs_common.h  physheap.h  physheap_config.h  pvr_bridge.h  rgx_fw_info.h  rgx_fwif.h  sync_checkpoint_internal.h
services/include/rogue/: km_apphint_defs.h  rgxapi_km.h
services/include/volcanic/: km_apphint_defs.h
services/server/common/: cache_km.c  connection_server.c  debug_common.c  devicemem_history_server.c  devicemem_server.c  di_impl_brg.c  di_impl_brg.h  di_server.c  dma_km.c  handle.c  htb_debug.c  htbserver.c  mmu_common.c  pdump_server.c  physheap.c  physmem.c  physmem_extmem.c  physmem_hostmem.c  physmem_lma.c  physmem_osmem.c  physmem_ramem.c  pmr.c  power.c  process_stats.c  pvr_notifier.c  pvrsrv.c  pvrsrv_bridge_init.c  ri_server.c  srvcore.c  sync_checkpoint.c  sync_fallback_server.c  sync_server.c  tlserver.c  tlstream.c  vmm_pvz_server.c  vz_vmm_vm.c
services/server/devices/: rgxbvnc.c  rgxccb.c  rgxccb.h  rgxcompute.c  rgxcompute.h  rgxdebug_common.c  rgxdebug_common.h  rgxfwcmnctx.c  rgxfwcmnctx.h  rgxfwdbg.c  rgxfwdbg.h  rgxfwimageutils.c  rgxfwmemctx.h  rgxfwriscv.c  rgxfwriscv.h  rgxfwutils.h  rgxhwperf.h  rgxhwperf_common.c  rgxhwperf_common.h  rgxinit.h  rgxinit_apphints.h  rgxkicksync.c  rgxlayer.h  rgxlayer_impl.h  rgxlayer_impl_common.c  rgxmem.c  rgxmmuinit.c  rgxmmuinit.h  rgxpdump_common.c  rgxpdump_common.h  rgxpower.c  rgxpower.h  rgxregconfig.c  rgxshader.c  rgxtdmtransfer.c  rgxtimecorr.c  rgxtimerquery.c  rgxtimerquery.h  rgxutils.c  rgxutils.h  (+1 more)
services/server/include/: debug_common.h  device.h  devicemem_heapcfg.h  devicemem_history_server.h  devicemem_server.h  handle_impl.h  handle_types.h  htbserver.h  mmu_common.h  os_apphint.h  osconnection_server.h  osdi_impl.h  osfunc.h  ospvr_gputrace.h  pdump_km.h  physmem.h  physmem_dlm.h  physmem_dmabuf.h  physmem_extmem.h  physmem_lma.h  physmem_osmem.h  physmem_ramem.h  pmr.h  pmr_impl.h  power.h  process_stats.h  pvr_dvfs.h  pvr_notifier.h  pvrsrv.h  pvrsrv_cleanup.h  pvrsrv_device.h  pvrsrv_sync_server.h  rgx_firmware_boot.h  ri_server.h  signfw.h  srvcore.h  srvkm.h  sync_checkpoint.h  tlintern.h  tlstream.h  (+2 more)
services/shared/common/: devicemem.c  devicemem_utils.c  hash.c  mem_utils.c  ra.c
services/shared/include/: device_connection.h  devicemem.h  devicemem_utils.h  devicememx.h  htbuffer.h  lock.h  proc_stats.h  ra.h  sync_internal.h
services/system/common/: sysconfig_cmn.c  vmm_type_jailhouse.c  vz_physheap_tc.c
services/system/europa/: sysconfig_dt.c
services/system/include/: ion_support.h  syscommon.h
services/system/plato/: sysconfig.c
services/system/rgx_dra822/: sysconfig.c  sysconfig.h  sysinfo.h
services/system/rgx_j721e/: sysconfig.c
services/system/rgx_linux_plato/: Kbuild.mk  sysconfig.c  sysinfo.h
services/system/rgx_nohw/: sysconfig.c  sysinfo.h
services/system/rgx_tc/: sysconfig.h
services/system/rgx_vexpress/: sysconfig.c
services/system/rk3368/: rk_init.h  rk_init_v2.c  rk_init_v2.h  sysconfig.c  sysconfig.h  sysinfo.h
services/system/vz_example/: sysconfig.c  sysconfig.h  sysinfo.h
(+179 files in other folders)
